[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geobreeze"
version = "0.1.0"
description = "Simple, Fast, and Flexible Evaluation of Remote Sensing Foundation Models"
authors = [
    { name = "Leonard Waldmann", email = "leonard.waldmann@tum.de" }
]


[tool.pytest.ini_options]

filterwarnings = [
    # Expected warnings
    # ignore num workers
    "ignore:The 'val_dataloader' does not have many workers which may be a bottleneck:UserWarning",
    "ignore:The 'train_dataloader' does not have many workers which may be a bottleneck:UserWarning",
    # ignore cpu
    "ignore:GPU available but not used.:UserWarning",
    # ignore xformers
    "ignore:xFormers is not available:UserWarning"
]

[tool.setuptools.packages.find]
include = ["geobreeze*"]